# pulsar-vlds

./: LICENSE  Makefile.am  Makefile.in  README.adoc  aclocal.m4  autogen  config.h.in  configure  configure.ac  sst.bash
build-aux/: GATBPS_CONFIG_FILE_RULES.am  GATBPS_CONFIG_LATER_RULES.am  GATBPS_CP_RULES.am  GATBPS_GIT_ARCHIVE_RULES.am  GATBPS_GIT_BUNDLE_RULES.am  GATBPS_GIT_CLONE_RULES.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_PAD.am  GATBPS_WGET_RULES.am  adock  autogen.ac  autogen.am  cp.am  docker.am  dvi-dist.am  gatbps-echo.sh  gatbps-gen-date.sh  gatbps-gen-version.sh  gatbps.ac  gatbps.am  git.am  html-dist.am  java-dist.am  javadoc-dist.am  javadoc.am  ps-dist.am  sst.am  sst_ajh_asciidoctor_document_html_recipe.sh  wget.am
build-aux/downloads/: MIT.txt.ag.json  bcpkix-jdk15on-1.69.jar.ag.json  bcprov-jdk15on-1.69.jar.ag.json  bcutil-jdk15on-1.69.jar.ag.json  bootstrap-3.4.1-glyphicons-halflings-regular.woff.ag.json  bootstrap-3.4.1-glyphicons-halflings-regular.woff2.ag.json  bootstrap-3.4.1.min.css.ag.json  bootstrap-3.4.1.min.js.ag.json  doT-1.1.3.min.js.ag.json  jquery-3.6.0.min.js.ag.json  jquery-extendext-1.0.0.js.ag.json  json-20210307.jar.ag.json  junit-jupiter-api-5.5.1.jar.ag.json  junit-jupiter-params-5.5.1.jar.ag.json  mssql-jdbc-9.4.0.jre8.jar.ag.json  mssql-jdbc_auth-9.4.0.zip.ag.json  mysql-connector-java-5.1.44.tar.gz.ag.json  mysql-connector-java-8.0.17.jar.ag.json  mysql-connector-java-8.0.17.tar.gz.ag.json  mysql-connector-java.tar.any.ag.json  netty-all-4.1.65.Final.jar.ag.json  postgresql-42.2.6.jar.ag.json  query-builder-2.6.0.default.min.css.ag.json  query-builder-2.6.0.min.js.ag.json  sqlite-jdbc-3.36.0.1.jar.ag.json  sst.tar.gz.ag.json
build-aux/gitbundles/: pulsar-vlds.ag.json
doc/: pulsar-vlds-manual.tar.xz  pulsar-vlds.am
doc/manual/: acknowledgments.adoc  attributes.adoc  build.phony.ag  config.adoc.im.in  configuring_the_database_connections.adoc  configuring_the_interserver_connections.adoc  configuring_the_lexicon.adoc  configuring_the_servers.adoc  index.adoc  index.html.ag.json  index.html.children  index.html.children_nodist  installing_pulsar_vlds.adoc  installing_the_portable_windows_edition.adoc  installing_the_prerequisites.adoc  introduction.adoc  java_library.adoc  jl_aggregate.adoc  jl_aggregate_function.adoc  jl_channel_output_buffer_limit.adoc  jl_column.adoc  jl_column_type.adoc  jl_condition.adoc  jl_condition_operator.adoc  jl_condition_token.adoc  jl_config.adoc  jl_dbinfo.adoc  jl_lexicon.adoc  jl_lexicon_common.adoc  jl_party.adoc  jl_query.adoc  jl_table.adoc  underlying_name_fragment.adoc
doc/pages/: Gemfile  README.adoc  _config.yml  build.phony.ag  index.md  manual.am  style.scss
doc/readme/: build.phony.ag  common.adoc  config.adoc  config.adoc.in  flatten.gawk  readme.adoc
doc/windows/: README.txt
docs/: index.html  style.css
docs/manual/: index.html
install/: on-ubuntu
lib/: pulsar-vlds.jar.ag.json  pulsar-vlds.jar.build_tree_classpath.im.in  pulsar-vlds.jar.classpath  pulsar-vlds.jar.classpath.im.in
m4/: DEFINE_ALL.m4  DEFINE_AR.m4  DEFINE_AT.m4  DEFINE_CC.m4  DEFINE_CLASSPATH.m4  DEFINE_CLASSPATH_SEPARATOR.m4  DEFINE_CXX.m4  DEFINE_EXEEXT.m4  DEFINE_GZIP.m4  DEFINE_JAR.m4  DEFINE_JAVA.m4  DEFINE_JAVAC.m4  DEFINE_JAVACFLAGS.m4  DEFINE_JAVADOC.m4  DEFINE_JDEPS.m4  DEFINE_MAKEINFO.m4  DEFINE_PULSAR_VLDS_ENABLE_INTERNAL_ERROR_CHECKS.m4  DEFINE_PULSAR_VLDS_ENABLE_INVALID_ARGUMENT_CHECKS.m4  DEFINE_PULSAR_VLDS_ENABLE_UNDEFINED_BEHAVIOR_CHECKS.m4  DEFINE_RANLIB.m4  DEFINE_TAR.m4  DEFINE_XZ.m4  DEFINE_javadir.m4  DEFINE_javadocdir.m4  GATBPS_ARG_ENABLE.m4  GATBPS_ARG_ENABLE_BOOL.m4  GATBPS_CACHE_CHECK.m4  GATBPS_CHECK_CLASSPATH_SEPARATOR.m4  GATBPS_CHECK_EXEEXT.m4  GATBPS_CONFIG_FILE.m4  GATBPS_CONFIG_FILE_SUBST.m4  GATBPS_CONFIG_LATER.m4  GATBPS_CONFIG_LATER_SUBST.m4  GATBPS_CONFIG_LATER_VAR.m4  GATBPS_CP.m4  GATBPS_CP_SUBST.m4  GATBPS_DEFINE_AT.m4  GATBPS_DEFINE_CLASSPATH.m4  GATBPS_DEFINE_DATE.m4  GATBPS_DEFINE_JAVACFLAGS.m4  (+17 more)
src/bash/: sst.bash
src/html/: build.phony.ag  index.html
src/install/: on-x-symbolic-link-test
src/windows_portable_java/: Dockerfile  build.phony.ag  db1.cfg  db2.cfg  manual.html  ph.cfg  server.cmd
src/windows_portable_native/: build.phony.ag  jni-config.json  predefined-classes-config.json  recipe.sh  reflect-config.json  resource-config.json  serialization-config.json  server.cmd
unittest/: unittest.bash
unittest/test1/: Test1DB1.sql.00.mysql  Test1DB1.sql.00.sqlserver  Test1DB1.sql.10  Test1DB2.sql.00.mysql  Test1DB2.sql.00.sqlserver  Test1DB2.sql.10  common.cfg  db1.cfg  db1.cfg.mysql  db1.cfg.sqlite  db1.cfg.sqlserver  db2.cfg  db2.cfg.mysql  db2.cfg.sqlserver  gen1.py  gen2.py  ph.cfg  q1-1.ans  q1-1.rest  q1-2.ans  q1-2.rest  q1-3.ans  q1-3.rest  q1-4.ans  q1-4.rest
unittest/test11/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test1DB1.sql  Test1DB2.sql  q1-1.ans  q1-1.rest  q1-2.ans  q1-2.rest  q1-3.ans  q1-3.rest
unittest/test12/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test12DB1.sql  Test12DB2.sql  Test12Lex.json  q1-1.ans  q1-1.rest  q1-2.ans  q1-2.rest  q1-3.ans  q1-3.rest
unittest/test2/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test2DB1.sql  Test2DB2.sql  Test2Lex.json  q2-1.ans  q2-1.rest  q2-2.ans  q2-2.rest  q2-3.ans  q2-3.rest  q2-4.ans  q2-4.rest
unittest/test3/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test3DB1.sql  Test3DB2.sql  Test3Lex.json  q3-1.ans  q3-1.rest  q3-2.ans  q3-2.rest  q3-3.ans  q3-3.rest  q3-4.ans  q3-4.rest
unittest/test4/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test4DB1.sql  Test4DB2.sql  Test4Lex.json  q4-1.ans  q4-1.rest  q4-2.ans  q4-2.rest  q4-3.ans  q4-3.rest  q4-4.ans  q4-4.rest
unittest/test5/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test5DB1.sql  Test5DB2.sql  Test5Lex.json  q5-1.ans  q5-1.rest  q5-2.ans  q5-2.rest  q5-3.ans  q5-3.rest  q5-4.ans  q5-4.rest
unittest/test6/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test6DB1.sql  Test6DB2.sql  Test6Lex.json  q6-1.ans  q6-1.rest  q6-2.ans  q6-2.rest  q6-3.ans  q6-3.rest  q6-4.ans  q6-4.rest
unittest/test7/: DB1.cfg  DB2.cfg  Front.cfg  PH.cfg  Test7DB1.sql  Test7DB2.sql  q7-1.ans  (+8 more)
(+250 files in other folders)
